--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.10",
     "graphql": "^16.8.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
@@ -65,9 +66,11 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sharp": "0.32.6",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.10",
