--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@maplibre/maplibre-gl-geocoder": "^1.8.0",
     "@payloadcms/db-postgres": "latest",
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
@@ -48,6 +49,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/postcss": "^4.0.10",
     "@tanstack/react-table": "^8.21.2",
+    "@types/leaflet": "^1.9.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -58,6 +60,7 @@
     "graphql": "^16.8.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
+    "maplibre-gl": "^5.2.0",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "payload": "latest",
